# Fractal-Generator-CUDA-Qt-App

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: fractalgraphicsview.h  fractalworker.h  julia_set_generator.h  mainwindow.h
include/common/: bitmap_image.hpp
src/: fractalgraphicsview.cpp  fractalworker.cpp  julia_test.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
